# swagger.yml
@@ -9,6 +9,8 @@ tags:
     description: Auth routes
   - name: probes
     description: Probes endpoints
+  - name: post
+    description: Post endpoints
 host: "localhost:8081"
 schemes:
   - https
@@ -189,7 +191,123 @@ paths:
           description: Not found
         500:
           description: Internal error
-
+  /api/v1/post/create:
+    post:
+      tags:
+        - post
+      summary: create post
+      operationId: post_create
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: id
+          schema:
+            type: object
+            required:
+              - text
+            properties:
+              text:
+                $ref: "#/definitions/PostText"
+          required: true
+      responses:
+        200:
+          description: success response
+          schema:
+            type: object
+            properties:
+              data:
+                $ref: "#/definitions/PostId"
+        500:
+          description: Internal error
+  /api/v1/post/update:
+    put:
+      tags:
+        - post
+      summary: update post
+      operationId: post_update
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: id
+          schema:
+            type: object
+            required:
+              - text
+              - id
+            properties:
+              id:
+                $ref: "#/definitions/PostId"
+              text:
+                $ref: "#/definitions/PostText"
+          required: true
+      responses:
+        200:
+          description: success response
+          schema:
+            type: object
+            properties:
+              data:
+                $ref: "#/definitions/PostId"
+        500:
+          description: Internal error
+  /api/v1/post/delete/{id}:
+    put:
+      tags:
+        - post
+      summary: delete post
+      operationId: post_delete
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - name: id
+          in: path
+          type: integer
+          required: true
+          description: "post id"
+      responses:
+        200:
+          description: success response
+          schema:
+            type: object
+            properties:
+              data:
+                $ref: "#/definitions/PostId"
+        500:
+          description: Internal error
+  /api/v1/post/get/{id}:
+    get:
+      tags:
+        - post
+      summary: get post
+      operationId: post_get
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - name: id
+          in: path
+          type: integer
+          required: true
+          description: "post id"
+      responses:
+        200:
+          description: success response
+          schema:
+            type: object
+            properties:
+              data:
+                $ref: "#/definitions/Post"
+        500:
+          description: Internal error
   /ready:
     get:
       tags:
@@ -224,16 +342,16 @@ definitions:
   registration:
     type: object
     properties:
-        last_name:
-          type: string
-        sex:
-          type: string
-        interests:
-          type: string
-        password:
-          type: string
-        age:
-          type: integer
+      last_name:
+        type: string
+      sex:
+        type: string
+      interests:
+        type: string
+      password:
+        type: string
+      age:
+        type: integer
   tokens:
     type: object
     properties:
@@ -241,6 +359,28 @@ definitions:
         type: string
       refreshToken:
         type: string
+  Post:
+    type: object
+    description: "user post"
+    properties:
+      id:
+        $ref: "#/definitions/PostId"
+      text:
+        $ref: "#/definitions/PostText"
+      author_user_id:
+        $ref: "#/definitions/UserId"
+  UserId:
+    type: string
+    description: "user id"
+    example: "1d535fd6-7521-4cb1-aa6d-031be7123c4d"
+  PostId:
+    type: string
+    description: "post id"
+    example: "1d535fd6-7521-4cb1-aa6d-031be7123c4d"
+  PostText:
+    type: string
+    description: "post text"
+    example: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
   user:
     type: object
     properties:
